# live_state_testbed

./: .gitignore  .tool-versions  mix.exs  todo-list.js  todo-list.wit
.github/workflows/: ci.yml
assets/: package-lock.json  package.json
assets/js/: TodoForm.tsx  TodoList.tsx  alpine-demo.js  app.js  connect-error.ts  display-error.ts  dumb-form.ts  live-state-element.ts  patch-thing.ts  react-todo.tsx  stampino.ts  templize-element.js  templize.js  todo-form.ts  wasm-test.ts
config/: config.exs  dev.exs  test.exs
lib/: higher_order.ex
lib/livestate_testbed/: application.ex  people.ex  repo.ex
lib/livestate_testbed/people/: person.ex
lib/livestate_testbed_web/: router.ex  wasm_component.ex
lib/livestate_testbed_web/channels/: init_error_channel.ex  js_wasm_channel.ex  patch_channel.ex  people_channel.ex  pubsub_sender_channel.ex  todo_channel.ex  user_socket.ex
lib/livestate_testbed_web/controllers/: page_controller.ex
native/livestatetestbedweb_wasmcomponent/: Cargo.toml  README.md
native/livestatetestbedweb_wasmcomponent/src/: lib.rs
priv/: init.exs
priv/repo/migrations/: 20231211000728_create_people.exs
priv/wasm/: esbuild.js  package-lock.json  package.json
priv/wasm/src/: index.js  wrap.js
test/: test_helper.exs
test/livestate_testbed/: people_test.exs
test/livestate_testbed_web/channels/: todo_channel_test.exs
test/livestate_testbed_web/controllers/: page_controller_test.exs
test/livestate_testbed_web/features/: error_test.exs  join_params_test.exs  live_template_test.exs  patch_channel_test.exs  todo_list_test.exs
(+9 files in other folders)
